--- a/content/blogs/Abdullah_Rehman.html
+++ b/content/blogs/Abdullah_Rehman.html
@@ -23,18 +23,7 @@ title: Magna
 <p>My name is Abdullah Rehman as I have mentioned numerous times by now in this report. I am an incoming MAM student looking to pursue my passion for consulting. I was brought up in Pakistan but always had roots in England due to my extensive family here so decided to come her for my undergraduate studies.</p>
 <p>I did my undergrad from <a href="https://www.ucl.ac.uk"><strong>University College London</strong></a> in <em>Chemical Engineering</em> and graduated with a first class honors. After my undergrad, I was offered a job at Accenture which I was unable to take at the time due to a few serious family problems back home and I left England for 2 years until now. I am now keen on taking a full time consulting role and looking to do my best to earn a spot in the top tier firms.</p>
 <p>During my spare time, I love to paint. I have an online profile at <a href="https://www.saatchiart.com/account/artworks/1107889">Saatchi Art Gallery</a>. I am attaching a few of them below and the rest can be seen on the link mentioned. I am also an avid chocolate enthusiast, I can skip any meal of the day except for dessert.</p>
-<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-1"></span>
-<img src="/Users/abdullahrehman/Downloads/ART/IMG_1930.jpg" alt="Figure 1.1" width="30%" />
-<p class="caption">
-Figure 1: Figure 1.1
-</p>
-</div>
-<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-2"></span>
-<img src="/Users/abdullahrehman/Downloads/ART/IMG_1878.jpg" alt="Figure 1.2" width="30%" />
-<p class="caption">
-Figure 2: Figure 1.2
-</p>
-</div>
+<p><img src="/img/IMG_1878.jpg" width="70%" /></p>
 <p>Figure 1.1 and 1.2 are some of my artworks which are oil on canvas.</p>
 <p>Below is a list of some of my favourite books. Although I don’t get the time to read much these days, these books are still some of my favorites:</p>
 <ul>
@@ -68,7 +57,7 @@ Figure 2: Figure 1.2
 ## $ gdpPercap &lt;dbl&gt; 779.4453, 820.8530, 853.1007, 836.1971, 739.9811, 786.1134, …</code></pre>
 <table class=" lightable-classic" style="font-family: Cambria; width: auto !important; margin-left: auto; margin-right: auto;">
 <caption>
-<span id="tab:unnamed-chunk-3">Table 1: </span>Table 2.1
+<span id="tab:unnamed-chunk-1">Table 1: </span>Table 2.1
 </caption>
 <thead>
 <tr>
