--- a/content/blogs/myartblog.html
+++ b/content/blogs/myartblog.html
@@ -11,11 +11,15 @@ draft: false
 image: pic08.jpg
 keywords: ""
 slug: myartblog
-title: Tempus
+title: Art Portfolio
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <pre class="r"><code>knitr::include_graphics(&quot;/img/ART/IMG_1930.jpg&quot;, error = FALSE)</code></pre>
-<p><img src="/img/ART/IMG_1930.jpg" /><!-- --></p>
+<p><img src="/img/ART/IMG_1930.jpg" width="70%" /></p>
+<pre class="r"><code>knitr::include_graphics(&quot;/img/ART/IMG_5435.jpg&quot;, error = FALSE)</code></pre>
+<p><img src="/img/ART/IMG_5435.jpg" width="70%" /></p>
+<pre class="r"><code>knitr::include_graphics(&quot;/img/ART/IMG_5638.jpg&quot;, error = FALSE)</code></pre>
+<p><img src="/img/ART/IMG_5638.jpg" width="70%" /></p>
