--- a/content/blogs/Resume.html
+++ b/content/blogs/Resume.html
@@ -14,8 +14,7 @@ title: My CV
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<p>–</p>
 <div id="cv" class="section level2">
 <h2>CV</h2>
-<p><embed src="/img/Resume.pdf" /><!-- --></p>
+<embed src="/img/Resume.pdf" width="200%" type="application/pdf" />
 </div>
