--- a/content/blogs/Resume.html
+++ b/content/blogs/Resume.html
@@ -16,5 +16,5 @@ title: My CV
 
 <div id="cv" class="section level2">
 <h2>CV</h2>
-<embed src="/img/Resume.pdf" width="0.3\linewidth" style="display: block; margin: auto;" type="application/pdf" />
+<embed src="/img/Resume.pdf" width="100%" style="display: block; margin: auto;" type="application/pdf" />
 </div>
