--- a/content/blogs/Resume.html
+++ b/content/blogs/Resume.html
@@ -14,7 +14,6 @@ title: My CV
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<div id="cv" class="section level2">
-<h2>CV</h2>
-<embed src="/img/Resumetheme.pdf" width="100%" style="display: block; margin: auto;" type="application/pdf" />
-</div>
+<blockquote>
+<p>CV</p>
+</blockquote>
