--- a/content/blogs/myartblog.html
+++ b/content/blogs/myartblog.html
@@ -15,14 +15,6 @@ title: Art Portfolio
 
 <p>My love for art stems from growing up in a household where my grandmother was an artist. She is one of my main inspirations for my artworks.
 The artworks below are some of her work</p>
-<pre class="r"><code>knitr::include_graphics(&quot;/img/ART/IMG_5567.jpg&quot;, error = FALSE)</code></pre>
-<p><img src="/img/ART/IMG_5567.jpg" width="70%" /></p>
-<pre class="r"><code>knitr::include_graphics(&quot;/img/ART/IMG_5564.heic&quot;, error = FALSE)</code></pre>
-<p><img src="/img/ART/IMG_5564.heic" width="70%" /></p>
+<p><img src="/img/ART/IMG_5567.jpg" /><!-- --><img src="/img/ART/IMG_5564.jpg" /><!-- --></p>
 <p>The artworks below are my own work:</p>
-<pre class="r"><code>knitr::include_graphics(&quot;/img/ART/IMG_1930.jpg&quot;, error = FALSE)</code></pre>
-<p><img src="/img/ART/IMG_1930.jpg" width="70%" /></p>
-<pre class="r"><code>knitr::include_graphics(&quot;/img/ART/IMG_5435.jpg&quot;, error = FALSE)</code></pre>
-<p><img src="/img/ART/IMG_5435.jpg" width="70%" /></p>
-<pre class="r"><code>knitr::include_graphics(&quot;/img/ART/IMG_5638.jpg&quot;, error = FALSE)</code></pre>
-<p><img src="/img/ART/IMG_5638.jpg" width="70%" /></p>
+<p><img src="/img/ART/IMG_1930.jpg" width="70%" /><img src="/img/ART/IMG_5435.jpg" width="70%" /><img src="/img/ART/IMG_5638.jpg" width="70%" /></p>
