--- a/content/blogs/myartblog.html
+++ b/content/blogs/myartblog.html
@@ -20,4 +20,6 @@ title: Art Portfolio
 <p>Growing on this, I started getting into art from a young age. My love for art took me around various art museums as well as weekly visits to the Tate Modern now that I am in London.</p>
 <p>I was able to set up an onlinr profile at <a href="https://www.saatchiart.com/account/artworks/1107889"><strong>Saatchi Art Gallery</strong></a>. You can have a look at my art portfolio through the link above.</p>
 <p>My main artworks are oil on canvas some of my favourites which I am attaching below.</p>
-<p><img src="/img/ART/IMG_1930.jpg" width="50%" /><img src="/img/ART/IMG_1932.jpg" width="50%" /><img src="/img/ART/IMG_5638.jpg" width="50%" /></p>
+<p><img src="/img/ART/IMG_1930.jpg" width="50%" /></p>
+<p><img src="/img/ART/IMG_1932.jpg" width="50%" /></p>
+<p><img src="/img/ART/IMG_5638.jpg" width="50%" /></p>
