--- a/content/blogs/About_Me.html
+++ b/content/blogs/About_Me.html
@@ -14,9 +14,10 @@ title: A Brief Introduction
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-[](<iframe src="https://giphy.com/embed/xT9IgH0fInLY2LCDPa" width="480" height="352" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+<iframe src="https://giphy.com/embed/xT9IgH0fInLY2LCDPa" width="480" height="352" frameBorder="0" class="giphy-embed" allowFullScreen>
+</iframe>
 <p>
-<p><a href="https://giphy.com/gifs/trippy-glitch-space-xT9IgH0fInLY2LCDPa">)</p>
+<p><a href="https://giphy.com/gifs/trippy-glitch-space-xT9IgH0fInLY2LCDPa"></p>
 <div id="short-biography" class="section level1">
 <h1>Short Biography</h1>
 <div id="a-bit-about-me" class="section level2">
