--- a/content/blogs/Abdullah_Rehman.html
+++ b/content/blogs/Abdullah_Rehman.html
@@ -8,7 +8,7 @@ draft: false
 image: pic09.jpg
 keywords: ""
 slug: data
-title: Applied Statistics Assingemnt
+title: Applied Statistics Assignment
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
@@ -17,9 +17,6 @@ title: Applied Statistics Assingemnt
 
 
 <iframe src="https://giphy.com/embed/26tn33aiTi1jkl6H6" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen>
-</iframe>
-<p>
-<p><a href="https://giphy.com/gifs/screen-monitor-closeup-26tn33aiTi1jkl6H6"></p>
 <div id="task-1-short-biography" class="section level1">
 <h1>Task 1: Short Biography</h1>
 <div id="by-abdullah-rehman" class="section level2">
