--- a/content/blogs/Abdullah_Rehman.html
+++ b/content/blogs/Abdullah_Rehman.html
@@ -31,8 +31,6 @@ title: Applied Statistics Assignment
 ## $ degree      &lt;dbl&gt; 13.870661, 9.974114, 28.600135, 9.336294, 18.775591, 6.085…
 ## $ age_18to24  &lt;dbl&gt; 9.406093, 7.325850, 6.437453, 7.747801, 5.734730, 8.209863…</code></pre>
 <p>The data comes from <a href="https://www.thecrosstab.com/">Elliott Morris</a>, who cleaned it and made it available through his <a href="https://www.datacamp.com/courses/analyzing-election-and-polling-data-in-r">DataCamp class on analysing election and polling data in R</a>.</p>
-<p><img src="/blogs/Abdullah_Rehman_files/figure-html/brexit_histogram1-1.png" width="100%" /><img src="/blogs/Abdullah_Rehman_files/figure-html/brexit_histogram1-2.png" width="100%" />
+<p><img src="/blogs/Abdullah_Rehman_files/figure-html/brexit_histogram1-1.png" width="100%" />
 We can also create a scatterplot between these two variables using <code>geom_point</code>. We also add the best fit line, using <code>geom_smooth(method = "lm")</code>.</p>
-<p><img src="/blogs/Abdullah_Rehman_files/figure-html/brexit_immigration_plot-1.png" width="672" /></p>
-<pre><code>## NULL</code></pre>
 </div>
