--- a/content/blogs/Travel_Blog.html
+++ b/content/blogs/Travel_Blog.html
@@ -18,6 +18,8 @@ title: My Travel Blog
 <div id="pakistan" class="section level1">
 <h1>Pakistan</h1>
 <p>My latest trip was in Pakistan where I went upnorth to the beautiful area of Kashmir. Here are some of my favorite pictures from here:</p>
+<pre class="r"><code>myimages&lt;-list.files(&quot;/img/PAK/&quot;, pattern = &quot;.jpg&quot;, full.names = TRUE)
+include_graphics(myimages)</code></pre>
 </div>
 <div id="france" class="section level1">
 <h1>France</h1>
