--- a/content/blogs/Travel_Blog.html
+++ b/content/blogs/Travel_Blog.html
@@ -17,22 +17,8 @@ title: My Travel Blog
 <p>One of my biggest passions is travel and through my life, I have travelled to a number of countries.</p>
 <div id="pakistan" class="section level1">
 <h1>Pakistan</h1>
-<p>My latest trip was in Pakistan where I went upnorth to the beautiful area of Kashmir. Here are some of my favorite pictures from here:</p>
-<pre class="r"><code># myimages &lt;-list.files(&quot;img/PAK/&quot;, pattern = &quot;.jpg&quot;, full.names = TRUE)
-# include_graphics(myimages)
-
-include_graphics(&quot;/img/PAK/IMG_9804.jpg&quot;, error = FALSE)</code></pre>
-<p><img src="/img/PAK/IMG_9804.jpg" width="30%" /></p>
-<pre class="r"><code>include_graphics(&quot;/img/PAK/IMG_9837.jpg&quot;, error = FALSE)</code></pre>
-<p><img src="/img/PAK/IMG_9837.jpg" width="30%" /></p>
-<pre class="r"><code>include_graphics(&quot;/img/PAK/IMG_9838.jpg&quot;, error = FALSE)</code></pre>
-<p><img src="/img/PAK/IMG_9838.jpg" width="30%" /></p>
-<pre class="r"><code>include_graphics(&quot;/img/PAK/IMG_9839.jpg&quot;, error = FALSE)</code></pre>
-<p><img src="/img/PAK/IMG_9839.jpg" width="30%" /></p>
-<pre class="r"><code>include_graphics(&quot;/img/PAK/IMG_9841.jpg&quot;, error = FALSE)</code></pre>
-<p><img src="/img/PAK/IMG_9841.jpg" width="30%" /></p>
-<pre class="r"><code>include_graphics(&quot;/img/PAK/IMG_9853.jpg&quot;, error = FALSE)</code></pre>
-<p><img src="/img/PAK/IMG_9853.jpg" width="30%" /></p>
+<p>My latest trip was in Pakistan where I went upnorth to the beautiful area of Kashmir. Here are some of my favorite pictures from here:
+<img src="/img/PAK/IMG_9804.jpg" width="100%/3" /><img src="/img/PAK/IMG_9837.jpg" width="100%/3" /><img src="/img/PAK/IMG_9838.jpg" width="100%/3" /><img src="/img/PAK/IMG_9839.jpg" width="100%/3" /><img src="/img/PAK/IMG_9841.jpg" width="100%/3" /><img src="/img/PAK/IMG_9853.jpg" width="100%/3" /></p>
 </div>
 <div id="france" class="section level1">
 <h1>France</h1>
