--- a/content/blogs/Travel_Blog.html
+++ b/content/blogs/Travel_Blog.html
@@ -18,7 +18,8 @@ title: My Travel Blog
 <div id="pakistan" class="section level1">
 <h1>Pakistan</h1>
 <p>My latest trip was in Pakistan where I went upnorth to the beautiful area of Kashmir. Here are some of my favorite pictures from here:
-<img src="/img/PAK/IMG_9804.jpg" width="100%/3" /><img src="/img/PAK/IMG_9837.jpg" width="100%/3" /><img src="/img/PAK/IMG_9838.jpg" width="100%/3" /><img src="/img/PAK/IMG_9839.jpg" width="100%/3" /><img src="/img/PAK/IMG_9841.jpg" width="100%/3" /><img src="/img/PAK/IMG_9853.jpg" width="100%/3" /></p>
+<img src="/img/PAK/IMG_9804.jpg" width="100%/2" /><img src="/img/PAK/IMG_9837.jpg" width="100%/2" /></p>
+<p><img src="/img/PAK/IMG_9839.jpg" width="50%/3" /><img src="/img/PAK/IMG_9841.jpg" width="50%/3" /><img src="/img/PAK/IMG_9853.jpg" width="50%/3" /></p>
 </div>
 <div id="france" class="section level1">
 <h1>France</h1>
