--- a/content/blogs/Travel_Blog.html
+++ b/content/blogs/Travel_Blog.html
@@ -17,8 +17,19 @@ title: My Travel Blog
 <p>One of my biggest passions is travel and through my life, I have travelled to a number of countries.</p>
 <div id="pakistan" class="section level1">
 <h1>Pakistan</h1>
-<p>My latest trip was in Pakistan where I went upnorth to the beautiful area of Kashmir. Here are some of my favorite pictures from here:
-<img src="/img/PAK/IMG_9804.jpg" width="50%/2" /><img src="/img/PAK/IMG_9837.jpg" width="50%/2" /></p>
+<p>My latest trip was in Pakistan where I went upnorth to the beautiful area of Kashmir. Here are some of my favorite pictures from here:</p>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-1-1"></span>
+<img src="/img/PAK/IMG_9804.jpg" alt="(ref:foo-caption)" width="100%/2" />
+<p class="caption">
+Figure 1: (ref:foo-caption)
+</p>
+</div>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-1-2"></span>
+<img src="/img/PAK/IMG_9837.jpg" alt="(ref:foo-caption)" width="100%/2" />
+<p class="caption">
+Figure 2: (ref:foo-caption)
+</p>
+</div>
 <p><img src="/img/PAK/IMG_9838.jpg" width="50%/4" /><img src="/img/PAK/IMG_9839.jpg" width="50%/4" /><img src="/img/PAK/IMG_9841.jpg" width="50%/4" /><img src="/img/PAK/IMG_9853.jpg" width="50%/4" /></p>
 </div>
 <div id="france" class="section level1">
