--- a/content/blogs/Travel_Blog.html
+++ b/content/blogs/Travel_Blog.html
@@ -19,15 +19,15 @@ title: My Travel Blog
 <h1>Pakistan</h1>
 <p>My latest trip was in Pakistan where I went upnorth to the beautiful area of Kashmir. Here are some of my favorite pictures from here:</p>
 <div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-1-1"></span>
-<img src="/img/PAK/IMG_9804.jpg" alt="(ref:foo-caption)" width="50%/2" />
+<img src="/img/PAK/IMG_9804.jpg" alt="1" width="50%/2" />
 <p class="caption">
-Figure 1: (ref:foo-caption)
+Figure 1: 1
 </p>
 </div>
 <div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-1-2"></span>
-<img src="/img/PAK/IMG_9837.jpg" alt="(ref:foo-caption)" width="50%/2" />
+<img src="/img/PAK/IMG_9837.jpg" alt="2" width="50%/2" />
 <p class="caption">
-Figure 2: (ref:foo-caption)
+Figure 2: 2
 </p>
 </div>
 <p><img src="/img/PAK/IMG_9838.jpg" width="50%/4" /><img src="/img/PAK/IMG_9839.jpg" width="50%/4" /><img src="/img/PAK/IMG_9841.jpg" width="50%/4" /><img src="/img/PAK/IMG_9853.jpg" width="50%/4" /></p>
