--- a/content/blogs/Travel_Blog.html
+++ b/content/blogs/Travel_Blog.html
@@ -19,8 +19,8 @@ title: My Travel Blog
 <h1>Pakistan</h1>
 <p>My latest trip was in Pakistan where I went upnorth to the beautiful area of Kashmir. Here are some of my favorite pictures from here:</p>
 <p><img src="/img/PAK/IMG_9804.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/PAK/IMG_9837.jpg" width="50%" style="background-color: white;padding:10px" /></p>
-<p><img src="/img/PAK/IMG_9838.jpg" width="50%/2" /><img src="/img/PAK/IMG_9839.jpg" width="50%/2" /></p>
-<p><img src="/img/PAK/IMG_9841.jpg" width="50%/2" /><img src="/img/PAK/IMG_9853.jpg" width="50%/2" /></p>
+<p><img src="/img/PAK/IMG_9838.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/PAK/IMG_9839.jpg" width="50%" style="background-color: white;padding:10px" /></p>
+<p><img src="/img/PAK/IMG_9841.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/PAK/IMG_9853.jpg" width="50%" style="background-color: white;padding:10px" /></p>
 </div>
 <div id="france" class="section level1">
 <h1>France</h1>
