--- a/content/blogs/Travel_Blog.html
+++ b/content/blogs/Travel_Blog.html
@@ -24,9 +24,9 @@ title: My Travel Blog
 </div>
 <div id="france" class="section level1">
 <h1>France</h1>
-</div>
-<div id="switzerland" class="section level1">
-<h1>Switzerland</h1>
+<p><img src="/img/FRANCE/IMG_2657.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/FRANCE/IMG_2661.jpg" width="50%" style="background-color: white;padding:10px" /></p>
+<p><img src="/img/FRANCE/IMG_2714.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/FRANCE/IMG_2792.jpg" width="50%" style="background-color: white;padding:10px" />
+# Switzerland</p>
 </div>
 <div id="scotland" class="section level1">
 <h1>Scotland</h1>
