--- a/content/blogs/Travel_Blog.html
+++ b/content/blogs/Travel_Blog.html
@@ -25,12 +25,16 @@ title: My Travel Blog
 <div id="france" class="section level1">
 <h1>France</h1>
 <p><img src="/img/FRANCE/IMG_2657.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/FRANCE/IMG_2661.jpg" width="50%" style="background-color: white;padding:10px" /></p>
-<p><img src="/img/FRANCE/IMG_2714.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/FRANCE/IMG_2792.jpg" width="50%" style="background-color: white;padding:10px" />
-# Switzerland</p>
+<p><img src="/img/FRANCE/IMG_2714.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/FRANCE/IMG_2792.jpg" width="50%" style="background-color: white;padding:10px" /></p>
+</div>
+<div id="switzerland" class="section level1">
+<h1>Switzerland</h1>
+<p><img src="/img/FRANCE/IMG_2816.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/FRANCE/IMG_2821.jpg" width="50%" style="background-color: white;padding:10px" /></p>
 </div>
 <div id="scotland" class="section level1">
 <h1>Scotland</h1>
-</div>
-<div id="india" class="section level1">
-<h1>India</h1>
+<p><img src="/img/SCOT/IMG_2027.jpg" width="100%" style="background-color: white;padding:10px" style="display: block; margin: auto;" /></p>
+<p><img src="/img/SCOT/IMG_2011.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/SCOT/IMG_2077.jpg" width="50%" style="background-color: white;padding:10px" /></p>
+<p><img src="/img/FRANCE/IMG_2816.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/FRANCE/IMG_2821.jpg" width="50%" style="background-color: white;padding:10px" /></p>
+<p><img src="/img/FRANCE/IMG_2032.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/FRANCE/IMG_2080.jpg" width="50%" style="background-color: white;padding:10px" /></p>
 </div>
