--- a/content/blogs/Travel_Blog.html
+++ b/content/blogs/Travel_Blog.html
@@ -27,14 +27,10 @@ title: My Travel Blog
 <p><img src="/img/FRANCE/IMG_2657.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/FRANCE/IMG_2661.jpg" width="50%" style="background-color: white;padding:10px" /></p>
 <p><img src="/img/FRANCE/IMG_2714.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/FRANCE/IMG_2792.jpg" width="50%" style="background-color: white;padding:10px" /></p>
 </div>
-<div id="switzerland" class="section level1">
-<h1>Switzerland</h1>
-<p><img src="/img/FRANCE/IMG_2816.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/FRANCE/IMG_2821.jpg" width="50%" style="background-color: white;padding:10px" /></p>
-</div>
 <div id="scotland" class="section level1">
 <h1>Scotland</h1>
 <p><img src="/img/SCOT/IMG_2027.jpg" width="100%" style="background-color: white;padding:10px" style="display: block; margin: auto;" /></p>
-<p><img src="/img/SCOT/IMG_2011.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/SCOT/IMG_2077.jpg" width="50%" style="background-color: white;padding:10px" /></p>
-<p><img src="/img/FRANCE/IMG_2816.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/FRANCE/IMG_2821.jpg" width="50%" style="background-color: white;padding:10px" /></p>
-<p><img src="/img/FRANCE/IMG_2032.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/FRANCE/IMG_2080.jpg" width="50%" style="background-color: white;padding:10px" /></p>
+<p><img src="/img/SCOT/IMG_2011.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/SCOT/IMG_2150.jpg" width="50%" style="background-color: white;padding:10px" /></p>
+<p><img src="/img/SCOT/IMG_2082.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/SCOT/IMG_2080.jpg" width="50%" style="background-color: white;padding:10px" /></p>
+<p><img src="/img/SCOT/IMG_2077.jpg" width="50%" style="background-color: white;padding:10px" style="display: block; margin: auto;" /><img src="/img/SCOT/IMG_2026.jpg" width="50%" style="background-color: white;padding:10px" style="display: block; margin: auto;" /></p>
 </div>
