--- a/content/blogs/Travel_Blog.html
+++ b/content/blogs/Travel_Blog.html
@@ -19,13 +19,9 @@ title: My Travel Blog
 <h1>Pakistan</h1>
 <p>My latest trip was in Pakistan where I went upnorth to the beautiful area of Kashmir. Here are some of my favorite pictures from here:</p>
 <p><img src="/img/PAK/IMG_9804.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/PAK/IMG_9837.jpg" width="50%" style="background-color: white;padding:10px" /></p>
+<p><img src="/img/PAK/IMG_9834.jpg" width="100%" style="background-color: white;padding:10px" style="display: block; margin: auto;" /></p>
 <p><img src="/img/PAK/IMG_9838.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/PAK/IMG_9839.jpg" width="50%" style="background-color: white;padding:10px" /></p>
 <p><img src="/img/PAK/IMG_9841.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/PAK/IMG_9853.jpg" width="50%" style="background-color: white;padding:10px" /></p>
-</div>
-<div id="france" class="section level1">
-<h1>France</h1>
-<p><img src="/img/FRANCE/IMG_2657.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/FRANCE/IMG_2661.jpg" width="50%" style="background-color: white;padding:10px" /></p>
-<p><img src="/img/FRANCE/IMG_2714.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/FRANCE/IMG_2792.jpg" width="50%" style="background-color: white;padding:10px" /></p>
 </div>
 <div id="scotland" class="section level1">
 <h1>Scotland</h1>
@@ -33,4 +29,9 @@ title: My Travel Blog
 <p><img src="/img/SCOT/IMG_2011.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/SCOT/IMG_2150.jpg" width="50%" style="background-color: white;padding:10px" /></p>
 <p><img src="/img/SCOT/IMG_2082.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/SCOT/IMG_2080.jpg" width="50%" style="background-color: white;padding:10px" /></p>
 <p><img src="/img/SCOT/IMG_2077.jpg" width="100%" style="background-color: white;padding:10px" style="display: block; margin: auto;" /><img src="/img/SCOT/IMG_2026.jpg" width="100%" style="background-color: white;padding:10px" style="display: block; margin: auto;" /></p>
+</div>
+<div id="france" class="section level1">
+<h1>France</h1>
+<p><img src="/img/FRANCE/IMG_2657.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/FRANCE/IMG_2661.jpg" width="50%" style="background-color: white;padding:10px" /></p>
+<p><img src="/img/FRANCE/IMG_2714.jpg" width="50%" style="background-color: white;padding:10px" /><img src="/img/FRANCE/IMG_2792.jpg" width="50%" style="background-color: white;padding:10px" /></p>
 </div>
