--- a/content/blogs/About_Me.html
+++ b/content/blogs/About_Me.html
@@ -18,7 +18,8 @@ title: A Brief Introduction
 <h1>Short Biography</h1>
 <div id="a-bit-about-me" class="section level2">
 <h2>A bit about me</h2>
-<p>My name is Abdullah Rehman as I have mentioned numerous times by now in this report. I am an incoming MAM student looking to pursue my passion for consulting. I was brought up in Pakistan but always had roots in England due to my extensive family here so decided to come her for my undergraduate studies.</p>
+<p><img src="/img/Me.jpg" width="30%" style="background-color: white;padding:10px" style="display: block; margin: auto;" />
+My name is Abdullah Rehman as I have mentioned numerous times by now in this report. I am an incoming MAM student looking to pursue my passion for consulting. I was brought up in Pakistan but always had roots in England due to my extensive family here so decided to come her for my undergraduate studies.</p>
 <p>I did my undergrad from <a href="https://www.ucl.ac.uk"><strong>University College London</strong></a> in <em>Chemical Engineering</em> and graduated with a first class honors. After my undergrad, I was offered a job at Accenture which I was unable to take at the time due to a few serious family problems back home and I left England for 2 years until now. I am now keen on taking a full time consulting role and looking to do my best to earn a spot in the top tier firms.</p>
 <p>During my spare time, I love to paint. I have an online profile at <a href="https://www.saatchiart.com/account/artworks/1107889">Saatchi Art Gallery</a>. These artworks can be found in the art blogs section of this website. I am also an avid chocolate enthusiast, I can skip any meal of the day except for dessert.</p>
 <p>Below is a list of some of my favourite books. Although I don’t get the time to read much these days, these books are still some of my favorites:</p>
